# os_lab1

./: CMakeLists.txt  README.md  daemon.cpp  daemon.h  main.cpp
lab1/: CMakeLists.txt  build.sh  daemon.cpp  daemon.h  main.cpp
lab2/: CMakeLists.txt  README.md  client.cpp  client.h  host.cpp  host.h
lab2/connections/: connmq.cpp  connpipe.cpp  connshm.cpp
lab3/: CMakeLists.txt  Queue.h  README.md  Tester.h  build.sh  main.cpp
